--- a/css/main-snake.css
+++ b/css/main-snake.css
@@ -67,8 +67,8 @@ a.snake-link:hover {
     font-size: 14px;
     color: #000000;
     text-align: center;
-    padding: 8px;
-    margin: 0px;
+    padding: 0px;
+    margin-left: 0%;
 }
 
 .snake-snakebody-block {
@@ -146,3 +146,4 @@ a.snake-link:hover {
     text-align: center;
     display: none;
 }
+
